--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "json-server server/db.json -m ./node_modules/json-server-auth -r server/routes.json"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.2",
+    "json-server-auth": "^2.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
