--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "json-server": "^0.16.2",
     "json-server-auth": "^2.0.2",
+    "jwt-decode": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
