--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.0",
     "json-server": "^0.16.2",
     "json-server-auth": "^2.0.2",
     "jwt-decode": "^3.0.0",
